[package]
name = "ev-range-exec-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ev-range-exec-guest"
path = "src/lib.rs"

[dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
ev-zkevm-types = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
