[package]
version = "0.1.0"
name = "ev-combined-script"
edition = "2021"
default-run = "ev-combined-exec"

[[bin]]
name = "ev-combined-exec"
path = "src/bin/main.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[[bin]]
name = "vkey-ev-combined-exec"
path = "src/bin/vkey.rs"

[dependencies]

bincode = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
dotenvy = { workspace = true }
ev-zkevm-types = { workspace = true }
hashbrown = "0.14.5"
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
sp1-sdk = { workspace = true }
tracing = "0.1.40"
alloy-primitives = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
