[package]
version = "0.1.0"
name = "ev-exec-program"
edition = "2021"

[dependencies]

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
celestia-types = { workspace = true }
ed25519-dalek = { workspace = true }
ev-exec-types = { path = "../../ev-exec-types" }
ev-types = { workspace = true, default-features = false }
hex = "0.4.3"
nmt-rs = "*"
prost = "=0.12.6"
reth-primitives = { workspace = true }
rsp-client-executor = { workspace = true }
serde_cbor = { workspace = true }
sha3 = { workspace = true }
sp1-zkvm = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
