[package]
version = "0.1.0"
name = "evm-exec-program"
edition = "2021"

[dependencies]
evm-exec-types = { path = "../../evm-exec-types" }

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
celestia-types = { workspace = true }
eq-common = { workspace = true }
hex = "0.4.3"
nmt-rs = "*"
prost = { workspace = true }
ev-client = { workspace = true, default-features = false }
ev-types = { workspace = true, default-features = false }
rsp-client-executor = { workspace = true }
reth-primitives = { workspace = true }
serde_cbor = { workspace = true }
sha3 = { workspace = true }
sp1-zkvm = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
ed25519-dalek = { workspace = true }
