[package]
version = "0.1.0"
name = "evm-exec-script"
edition = "2021"
default-run = "evm-exec"

[[bin]]
name = "evm-exec"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
evm-exec-types = { path = "../../evm-exec-types" }

bincode = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
eq-common = { workspace = true }
hex = { workspace = true }
nmt-rs = { workspace = true }
rsp-client-executor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = [
    "alloc",
] }
sp1-sdk = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tracing = "0.1.40"

[build-dependencies]
sp1-build = { workspace = true }
