[package]
version = "0.1.0"
name = "evm-exec-script"
edition = "2021"
default-run = "evm-exec"

[[bin]]
name = "data-gen"
path = "src/bin/datagen.rs"

[[bin]]
name = "evm-exec"
path = "src/bin/main.rs"

[[bin]]
name = "vkey-evm-exec"
path = "src/bin/vkey.rs"

[dependencies]
evm-exec-types = { path = "../../evm-exec-types" }

alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
anyhow = "1.0"
base64 = { workspace = true }
bincode = { workspace = true }
celestia-types = { workspace = true }
celestia-rpc = { workspace = true }
clap = { version = "4.0", features = ["cargo", "derive", "env"] }
dotenv = "0.15.0"
eq-common = { workspace = true }
eyre = "0.6.12"
hex = { workspace = true }
nmt-rs = { workspace = true }
prost = { workspace = true }
regex = "1.11.1"
reqwest = "0.12.15"
reth-chainspec = { workspace = true }
reth-primitives = { workspace = true }
rollkit-types = { workspace = true, features = ["grpc"] }
rsp-client-executor = { workspace = true }
rsp-primitives = { workspace = true }
rsp-host-executor = { workspace = true }
rsp-rpc-db = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
serde_json = { workspace = true, default-features = false, features = [
    "alloc",
] }
sha3 = { workspace = true }
sp1-sdk = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tokio = { version = "1.44", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1.40"


[build-dependencies]
sp1-build = { workspace = true }
