[package]
version = "0.1.0"
name = "evm-range-exec-program"
edition = "2021"

[dependencies]
evm-exec-types = { path = "../../evm-exec-types" }

sha2 = { version = "0.10.8", default-features = false }
celestia-types = { workspace = true }
serde_cbor = "0.11.2"
bincode = { workspace = true }
hex = { workspace = true }
hex-literal = { version = "0.4.1", default-features = false }
nmt-rs = { workspace = true }
reth-primitives = { workspace = true }
rsp-client-executor = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
sp1-zkvm = { workspace = true, features = ["verify"] }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
