[package]
version = "0.1.0"
name = "evm-range-exec-script"
edition = "2021"
# default-run = "evm-range-exec"
default-run = "vkey"

[[bin]]
name = "evm-range-exec"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
sp1-sdk = { workspace = true }
tracing = "0.1.40"

[build-dependencies]
sp1-build = { workspace = true }
