[package]
version = "0.1.0"
name = "evm-range-exec-script"
edition = "2021"
default-run = "evm-range-exec"

[[bin]]
name = "evm-range-exec"
path = "src/bin/main.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[[bin]]
name = "vkey-evm-range-exec"
path = "src/bin/vkey.rs"

[dependencies]

bincode = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
evm-exec-types = { path = "../../evm-exec-types" }
hashbrown = "0.14.5"
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
sp1-sdk = { workspace = true }
tracing = "0.1.40"

[build-dependencies]
sp1-build = { workspace = true }
